--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "30.0.1"
 
     defaultConfig {
-        applicationId "ru.netology"
+        applicationId "ru.netology.nmedia"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 1
@@ -17,6 +17,8 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
+
+    buildFeatures.viewBinding = true
 
     buildTypes {
         release {
