--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
 def arch_version = "2.1.0"
 def lifecycle_version = "2.3.1"
 def mdc_version = "1.3.0"
+def nav_version = "2.3.4"
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -51,6 +52,8 @@ dependencies {
     implementation "com.google.android.material:material:$mdc_version"
     implementation "androidx.fragment:fragment:1.3.3"
     implementation "com.google.code.gson:gson:2.8.6"
+    implementation "androidx.navigation:navigation-fragment-ktx$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx$nav_version"
     testImplementation 'junit:junit:4.+'
     testImplementation "androidx.arch.core:core-testing:$arch_version"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
