--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation "com.google.code.gson:gson:2.8.6"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     testImplementation "androidx.arch.core:core-testing:$arch_version"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
