--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ def arch_version = "2.1.0"
 def lifecycle_version = "2.3.1"
 def mdc_version = "1.3.0"
 def nav_version = "2.3.5"
+def room_version = "2.2.6"
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -55,6 +56,8 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "androidx.room:room-runtime:$room_version"
+    //kapt "androidx.room:room-compiler:$room_version"
     testImplementation 'junit:junit:4.+'
     testImplementation "androidx.arch.core:core-testing:$arch_version"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
