--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,25 +44,27 @@ def lifecycle_version = "2.3.1"
 def mdc_version = "1.3.0"
 def nav_version = "2.3.5"
 def room_version = "2.3.0"
+def okhttp_version = "4.9.1"
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.activity:activity-ktx:1.2.3'
+    implementation 'androidx.activity:activity-ktx:1.2.4'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "com.google.android.material:material:$mdc_version"
-    implementation "androidx.fragment:fragment:1.3.5"
-    implementation "com.google.code.gson:gson:2.8.6"
+    implementation "androidx.fragment:fragment:1.3.6"
+    implementation "com.google.code.gson:gson:2.8.7"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "androidx.room:room-runtime:$room_version"
     implementation platform('com.google.firebase:firebase-bom:26.7.0')
     implementation 'com.google.firebase:firebase-messaging-ktx'
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
     kapt "androidx.room:room-compiler:$room_version"
     testImplementation 'junit:junit:4.13.2'
     testImplementation "androidx.arch.core:core-testing:$arch_version"
