--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,8 @@ def okhttp_version = "4.9.1"
 def retrofit_version = "2.9.0"
 def retrofitgson_version = "2.9.0"
 def okhttploggin_version = "4.9.1"
-def coroutines_version = "1.5.0"
+def coroutines_version = "1.5.1"
+def imagepicker_version = "2.1"
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -85,6 +86,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofitgson_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttploggin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "com.github.dhaval2404:imagepicker:$imagepicker_version"
 
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
     kapt "androidx.room:room-compiler:$room_version"
