--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NMedia"
-        android:name="androidx.multidex.MultiDexApplication"
+        android:name=".application.NMediaApplication"
         android:usesCleartextTraffic="${usesCleartextTraffic}"
         >
         <activity android:name=".activity.MainActivity">
