--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ def retrofitgson_version = "2.9.0"
 def okhttploggin_version = "4.9.1"
 def coroutines_version = "1.5.1"
 def imagepicker_version = "2.1"
+def play_services_base_version = "17.6.0"
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -92,7 +93,9 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofitgson_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttploggin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$coroutines_version"
     implementation "com.github.dhaval2404:imagepicker:$imagepicker_version"
+    implementation "com.google.android.gms:play-services-base:$play_services_base_version"
 
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
     kapt "androidx.room:room-compiler:$room_version"
