Update build.yml with secret file

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,12 +14,17 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
+      - name: Decode google-services.json
+        env:
+          FIREBASE_SECRET: ${{ secrets.FIREBASE_SECRET }}
+        run: echo $FIREBASE_SECRET > ./app/google-services.json
+
       - name: Build
         run: |
           chmod +x ./gradlew
-          ./gradlew build --info
+          ./gradlew build
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: app-debug.apk  
+          name: app-debug.apk
           path: app/build/outputs/apk/debug/app-debug.apk
