--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+        freeCompilerArgs += ['-Xopt-in=kotlin.RequiresOptIn',]
     }
 }
 
@@ -51,6 +52,7 @@ allprojects {
         maven { url "https://jitpack.io" }
     }
 }
+
 
 def arch_version = "2.1.0"
 def lifecycle_version = "2.3.1"
